# auto-seo

./: .env.example  .gitignore  AGENTS.md  AUTOSEO_INTEGRATION_GUIDE.md  CLAUDE.md  README.md  docker-compose.yml  push_code.bat  push_code.sh  pyproject.toml  pyrightconfig.json  run_campaign.py
app/: cache.py  cli.py  config.py  db.py  errors.py  llm.py  main.py
app/aeo/: checks.py  fanout.py  models.py  parser.py  routes.py  store.py
app/article/: constants.py  models.py  pipeline.py  prompts.py  schema.py  scorer.py  scrubber.py  tools.py
app/brand/: analyzer.py  browser_fetcher.py  detection.py  discovery.py  fetcher.py  gather.py  models.py  routes.py  scoring.py  store.py  stream.py
app/job/: models.py  routes.py  service.py
app/lifecycle/: __init__.py  measure.py  models.py  routes.py  scheduler.py  service.py
app/publish/: __init__.py  models.py  routes.py  service.py
app/serp/: client.py  fetcher.py  models.py
examples/: README.md  sample_output.json
examples/aeo/: e2e-check-da-perfect.json  e2e-check-da-too-long.json  e2e-check-htag-perfect.json  (+15 more)
frontend/: next.config.ts  package.json  pnpm-lock.yaml
tests/: conftest.py  test_aeo.py  test_aeo_e2e.py  test_api.py  test_brand.py  test_brand_e2e.py  test_brand_store.py  test_brand_stream.py  test_cli.py  test_db.py  test_detection.py  test_discovery.py  test_fanout.py  test_fanout_e2e.py  test_lifecycle.py  test_llm.py  test_models.py  test_pipeline.py  test_pipeline_e2e.py  test_prompts.py  test_quality.py  test_schema.py  test_scoring.py  test_scrubber.py  test_seo.py  test_serp_fetcher.py
(+145 files in other folders)
