[project]
name = "seo-article-generator"
version = "0.1.0"
description = "Backend service for generating SEO-optimized articles using an agent-based pipeline"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "openai>=1.70.0",
    "firecrawl-py>=4.0.0",
    "httpx>=0.28.0",
    "redis>=5.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "tenacity>=8.0",
    "textstat>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[project.scripts]
autoseo = "app.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
